--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.20.6/babel.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/js/all.min.js"></script>
   <style>
     /* Precompiled Tailwind CSS for the site */
     .container { width: 100%; padding-right: 1rem; padding-left: 1rem; margin-right: auto; margin-left: auto; }
@@ -141,7 +141,7 @@
         <header className="bg-white shadow sticky top-0 z-50">
           <nav className="container mx-auto px-4 py-4 flex justify-between items-center">
             <div className="flex items-center">
-              <img src="northshore-technologies-logo.png" alt="Northshore Technologies Logo" className="w-20 h-20 mr-2" />
+              <img src="northshore-logo.jpg" alt="Northshore Technologies Logo" className="w-20 h-20 mr-2" />
               <div className="text-2xl font-bold text-blue-900">Northshore Technologies</div>
             </div>
             <div className="hidden md:flex space-x-6">
@@ -327,4 +327,165 @@
           company: 'TechTrend Ltd.',
         },
         {
-          quote: 'The cloud migration was seamless, and
+          quote: 'The cloud migration was seamless, and our team loves the new setup!',
+          author: 'Emily Davis',
+          company: 'GrowEasy Solutions',
+        },
+      ];
+
+      return (
+        <section id="testimonials" className="py-16 bg-gray-100">
+          <div className="container mx-auto px-4">
+            <h2 className="text-3xl font-bold text-center mb-8 fade-in">What Our Clients Say</h2>
+            <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
+              {testimonials.map((testimonial, index) => (
+                <div key={index} className="bg-white p-6 rounded-lg shadow fade-in">
+                  <p className="text-gray-600 mb-4">"{testimonial.quote}"</p>
+                  <p className="text-blue-600 font-semibold">{testimonial.author}</p>
+                  <p className="text-gray-500">{testimonial.company}</p>
+                </div>
+              ))}
+            </div>
+            <div className="text-center mt-8">
+              <a
+                href="#contact"
+                className="bg-orange-500 text-white px-6 py-3 rounded font-semibold hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-orange-500 fade-in"
+              >
+                See How We Can Help You
+              </a>
+            </div>
+          </div>
+        </section>
+      );
+    }
+
+    // Blog Component
+    function Blog() {
+      const posts = [
+        {
+          title: 'Top 5 Cybersecurity Threats Facing SMBs in 2025',
+          excerpt: 'Learn about the latest cyber threats and how to protect your business.',
+        },
+        {
+          title: 'How Managed IT Services Save SMBs Time and Money',
+          excerpt: 'Discover the cost-saving benefits of outsourcing your IT needs.',
+        },
+        {
+          title: 'Why Your Business Needs a Disaster Recovery Plan',
+          excerpt: 'Be prepared for the unexpected with a robust recovery strategy.',
+        },
+      ];
+
+      return (
+        <section id="blog" className="py-16">
+          <div className="container mx-auto px-4">
+            <h2 className="text-3xl font-bold text-center mb-8 fade-in">Our Insights</h2>
+            <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
+              {posts.map((post, index) => (
+                <div key={index} className="bg-gray-100 p-6 rounded-lg fade-in">
+                  <h3 className="text-xl font-semibold mb-2">{post.title}</h3>
+                  <p className="text-gray-600 mb-4">{post.excerpt}</p>
+                  <a href="#blog" className="text-blue-600 hover:underline">
+                    Read More
+                  </a>
+                </div>
+              ))}
+            </div>
+            <div className="text-center mt-8">
+              <a
+                href="#blog"
+                className="bg-orange-500 text-white px-6 py-3 rounded font-semibold hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-orange-500 fade-in"
+              >
+                Stay Informed with Our Insights
+              </a>
+            </div>
+          </div>
+        </section>
+      );
+    }
+
+    // Contact Component
+    function Contact() {
+      const [formData, setFormData] = useState({
+        name: '',
+        email: '',
+        company: '',
+        message: '',
+      });
+      const [errors, setErrors] = useState({});
+
+      const validateForm = () => {
+        const newErrors = {};
+        if (!formData.name) newErrors.name = 'Name is required';
+        if (!formData.email || !/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(formData.email))
+          newErrors.email = 'Valid email is required';
+        if (!formData.message) newErrors.message = 'Message is required';
+        return newErrors;
+      };
+
+      const handleSubmit = () => {
+        const validationErrors = validateForm();
+        if (Object.keys(validationErrors).length === 0) {
+          console.log('Form submitted:', formData);
+          alert('Thank you for your message! We will get back to you soon.');
+          setFormData({ name: '', email: '', company: '', message: '' });
+        } else {
+          setErrors(validationErrors);
+        }
+      };
+
+      const handleChange = (e) => {
+        setFormData({ ...formData, [e.target.name]: e.target.value });
+        setErrors({ ...errors, [e.target.name]: '' });
+      };
+
+      return (
+        <section id="contact" className="py-16 bg-gray-100">
+          <div className="container mx-auto px-4">
+            <h2 className="text-3xl font-bold text-center mb-8 fade-in">Get in Touch</h2>
+            <div className="grid grid-cols-1 md:grid-cols-2 gap-8">
+              <div className="fade-in">
+                <div className="bg-blue-600 h-64 rounded-lg mb-6 flex items-center justify-center text-white">
+                  Map Placeholder
+                </div>
+                <p className="text-gray-600 mb-2"><strong>Phone:</strong> (123) 456-7890</p>
+                <p className="text-gray-600 mb-2"><strong>Email:</strong> info@northshoretech.com</p>
+                <p className="text-gray-600"><strong>Address:</strong> 123 Main St, Tech City, TC 12345</p>
+              </div>
+              <div className="bg-white p-6 rounded-lg shadow fade-in">
+                <div className="mb-4">
+                  <label className="block text-gray-700 mb-2" htmlFor="name">Name</label>
+                  <input
+                    type="text"
+                    name="name"
+                    value={formData.name}
+                    onChange={handleChange}
+                    className="w-full p-2 border rounded"
+                    aria-required="true"
+                  />
+                  {errors.name && <p className="text-red-600 text-sm">{errors.name}</p>}
+                </div>
+                <div className="mb-4">
+                  <label className="block text-gray-700 mb-2" htmlFor="email">Email</label>
+                  <input
+                    type="email"
+                    name="email"
+                    value={formData.email}
+                    onChange={handleChange}
+                    className="w-full p-2 border rounded"
+                    aria-required="true"
+                  />
+                  {errors.email && <p className="text-red-600 text-sm">{errors.email}</p>}
+                </div>
+                <div className="mb-4">
+                  <label className="block text-gray-700 mb-2" htmlFor="company">Company Name</label>
+                  <input
+                    type="text"
+                    name="company"
+                    value={formData.company}
+                    onChange={handleChange}
+                    className="w-full p-2 border rounded"
+                  />
+                </div>
+                <div className="mb-4">
+                  <label className="block text-gray-700
