--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   <i className={`${service.icon} text-4xl text-blue-600 mb-4`}></i>
                   <h3 className="text-xl font-semibold mb-2">{service.title}</h3>
                   <p className="text-gray-600 mb-4">{service.description}</p>
-                  <a href="#contact" className="text-blue-600 hover:underline">
+                  <a href="#contact" className="text-blue-600 hover:underline focus:underline">
                     Learn More
                   </a>
                 </div>
@@ -385,7 +385,7 @@
                 <div key={index} className="bg-gray-100 p-6 rounded-lg fade-in">
                   <h3 className="text-xl font-semibold mb-2">{post.title}</h3>
                   <p className="text-gray-600 mb-4">{post.excerpt}</p>
-                  <a href="#blog" className="text-blue-600 hover:underline">
+                  <a href="#blog" className="text-blue-600 hover:underline focus:underline">
                     Read More
                   </a>
                 </div>
@@ -460,7 +460,7 @@
                     name="name"
                     value={formData.name}
                     onChange={handleChange}
-                    className="w-full p-2 border rounded"
+                    className="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-orange-500"
                     aria-required="true"
                   />
                   {errors.name && <p className="text-red-600 text-sm">{errors.name}</p>}
@@ -472,7 +472,7 @@
                     name="email"
                     value={formData.email}
                     onChange={handleChange}
-                    className="w-full p-2 border rounded"
+                    className="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-orange-500"
                     aria-required="true"
                   />
                   {errors.email && <p className="text-red-600 text-sm">{errors.email}</p>}
@@ -484,8 +484,116 @@
                     name="company"
                     value={formData.company}
                     onChange={handleChange}
-                    className="w-full p-2 border rounded"
+                    className="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-orange-500"
                   />
                 </div>
                 <div className="mb-4">
-                  <label className="block text-gray-700
+                  <label className="block text-gray-700 mb-2" htmlFor="message">Message</label>
+                  <textarea
+                    name="message"
+                    value={formData.message}
+                    onChange={handleChange}
+                    className="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-orange-500"
+                    rows="4"
+                    aria-required="true"
+                  ></textarea>
+                  {errors.message && <p className="text-red-600 text-sm">{errors.message}</p>}
+                </div>
+                <button
+                  onClick={handleSubmit}
+                  className="bg-orange-500 text-white px-6 py-3 rounded font-semibold hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-orange-500"
+                >
+                  Send Message
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+      );
+    }
+
+    // Footer Component
+    function Footer() {
+      const footerLinks = [
+        { name: 'Services', href: '#services' },
+        { name: 'About', href: '#about' },
+        { name: 'Blog', href: '#blog' },
+        { name: 'Contact', href: '#contact' },
+        { name: 'Privacy Policy', href: '#privacy' },
+      ];
+
+      return (
+        <footer className="bg-blue-900 text-white py-8">
+          <div className="container mx-auto px-4">
+            <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
+              <div>
+                <h3 className="text-lg font-semibold mb-4">Northshore Technologies</h3>
+                <p className="text-gray-300">Your trusted partner for managed IT and cybersecurity solutions.</p>
+              </div>
+              <div>
+                <h3 className="text-lg font-semibold mb-4">Quick Links</h3>
+                <ul>
+                  {footerLinks.map((link, index) => (
+                    <li key={index}>
+                      <a href={link.href} className="text-gray-300 hover:text-white focus:underline">
+                        {link.name}
+                      </a>
+                    </li>
+                  ))}
+                </ul>
+              </div>
+              <div>
+                <h3 className="text-lg font-semibold mb-4">Connect With Us</h3>
+                <div className="flex space-x-4">
+                  <a href="#" className="text-gray-300 hover:text-white focus:underline">
+                    <i className="fab fa-linkedin"></i>
+                  </a>
+                  <a href="#" className="text-gray-300 hover:text-white focus:underline">
+                    <i className="fab fa-twitter"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <p className="text-center text-gray-300 mt-8">© 2025 Northshore Technologies. All Rights Reserved.</p>
+          </div>
+        </footer>
+      );
+    }
+
+    // Main App Component
+    function App() {
+      useEffect(() => {
+        const observer = new IntersectionObserver(
+          (entries) => {
+            entries.forEach((entry) => {
+              if (entry.isIntersecting) {
+                entry.target.classList.add('visible');
+              }
+            });
+          },
+          { threshold: 0.1 }
+        );
+
+        document.querySelectorAll('.fade-in').forEach((el) => observer.observe(el));
+        return () => observer.disconnect();
+      }, []);
+
+      return (
+        <div>
+          <Header />
+          <Hero />
+          <Services />
+          <About />
+          <Testimonials />
+          <Blog />
+          <Contact />
+          <Footer />
+        </div>
+      );
+    }
+
+    // Render the App
+    ReactDOM.render(<App />, document.getElementById('root'));
+  </script>
+</body>
+</html>
